<resources>
    <string name="app_name">4x4 Info</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="title_activity_disco_acitivity">DiscoAcitivity</string>
    <string name="error_crash_toast">Error caught</string>

    <string name="obd_protocol">obd_protocol</string>
    <string name="obd_sleep_update">obd_sleep_update</string>
    <string name="obd_sleep_select_cm">obd_sleep_select_cm</string>

    <string name="tccm_eng_rot_block">tccm_eng_rot_block</string>

    <string name="obd_sleep_update_title">Скорость обновления</string>
    <string name="obd_sleep_select_cm_title">Время задержки выбора блока</string>

    <string name="tccm_eng_rot_block_title">Сдвиг поворота TCCM для блокировки</string>
    <string name="GB_TEMP">Темп. коробки</string>
    <string name="zero">0</string>
    <string name="TC_TEMP">Темп. раздатки</string>
    <string name="rd_temp">Темп. зад. дифф.</string>
    <string name="tc_rot">Угол пов. мот. разд.</string>
    <string name="tc_sol">Положение соленоида</string>
    <string name="gb_shift">Переключатель передач</string>
    <string name="msg_service_connected">Service connected, starting queue</string>
    <string name="msg_err_service_not_started">Не запустился сервис</string>
    <string name="msg_stopping_service">Stopping service</string>
    <string name="pref_key_susp">susp</string>
    <string name="pref_key_wheel">wheel</string>
    <string name="ui_tc_sol_pos_hi">Hi</string>
    <string name="ui_tc_sol_pos_lo">Lo</string>
</resources>
