<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/car1" />

    <ProgressBar
        android:id="@+id/pb_front_left"
        style="@style/Widget.ProgressBar.Vertical"
        android:layout_width="10dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ProgressBar
        android:id="@+id/pb_front_right"
        style="@style/Widget.ProgressBar.Vertical"
        android:layout_width="10dp"
        android:layout_height="100dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="36dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintStart_toEndOf="@+id/pb_front_left"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ProgressBar
        android:id="@+id/pb_rear_left"
        style="@style/Widget.ProgressBar.Vertical"
        android:layout_width="9dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="8dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_front_left"
        app:layout_constraintVertical_bias="0.871" />

    <ProgressBar
        android:id="@+id/pb_rear_right"
        style="@style/Widget.ProgressBar.Vertical"
        android:layout_width="10dp"
        android:layout_height="100dp"
        android:layout_marginStart="276dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="@+id/pb_rear_left"
        app:layout_constraintStart_toEndOf="@+id/pb_rear_left" />

    <ImageView
        android:id="@+id/iv_central_diff_lock"
        android:layout_width="73dp"
        android:layout_height="69dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="304dp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/unlocked" />

    <ImageView
        android:id="@+id/iv_rear_diff_lock"
        android:layout_width="73dp"
        android:layout_height="69dp"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/locked" />

    <TextView
        android:id="@+id/tv_gear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="160dp"
        android:text="D"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="200dp"
        android:text="HI"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_curr_gear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="1"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_gear"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="376dp"
        android:layout_height="295dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/GB_TEMP" />

            <TextView
                android:id="@+id/tv_gb_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/TC_TEMP" />

            <TextView
                android:id="@+id/tv_tb_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/rd_temp" />

            <TextView
                android:id="@+id/tv_rd_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/tc_rot" />

            <TextView
                android:id="@+id/tv_tc_rot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/zero" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/tc_sol" />

            <TextView
                android:id="@+id/tv_tc_sol_pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/gb_shift" />

            <TextView
                android:id="@+id/tv_gb_shit_pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/zero" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/cb_wheel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Руль" />

            <CheckBox
                android:id="@+id/cb_susp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Подвеска" />

        </TableRow>

        <de.nitri.gauge.Gauge
            android:id="@+id/gauge_steering_wheel_pos"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="0.75"
            app:maxValue="650"
            app:minValue="-650"
            app:totalNicks="120"
            app:valuePerNick="10"
            app:upperText="Руль"/>
    </TableLayout>

    <TextView
        android:id="@+id/tv_w_fl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:text="0"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_front_left" />

    <TextView
        android:id="@+id/tv_w_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="324dp"
        android:layout_marginTop="68dp"
        android:text="0"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_front_right" />

    <TextView
        android:id="@+id/tv_w_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="60dp"
        android:text="0"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pb_rear_left"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_w_rr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginBottom="60dp"
        android:text="0"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pb_rear_right"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />


</android.support.constraint.ConstraintLayout>